--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "html-loader": "^1.1.0",
     "html-to-react": "^1.4.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -39,6 +38,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.0.0"
+    "gh-pages": "^3.0.0",
+    "html-loader": "^1.1.0"
   }
 }
