--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "dangerously-set-html-content": "^1.0.5",
     "html-to-react": "^1.4.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
